push terlebih dahulu

--- a/public/assets/baru/css/style.css
+++ b/public/assets/baru/css/style.css
@@ -1360,7 +1360,7 @@ h3 {
 
 /* line 1, ../../Arafath/CL/December/234. Finance/HTML/scss/_slider.scss */
 .slider_bg_1 {
-  background-image: url(../img/banner/banner.png);
+  background-image: url(/assets/baru/img/banner/2.jpg);
 }
 
 /* line 4, ../../Arafath/CL/December/234. Finance/HTML/scss/_slider.scss */
@@ -3103,7 +3103,7 @@ p #amount {
 
 /* line 4, ../../Arafath/CL/December/234. Finance/HTML/scss/_bradcam.scss */
 .bradcam_bg_2 {
-  background-image: url(../img/banner/bradcam2.png);
+  background-image: url(/assets/baru/img/banner/2.jpg);
 }
 
 /* line 7, ../../Arafath/CL/December/234. Finance/HTML/scss/_bradcam.scss */
