--- a/public/assets/baru/css/style.css
+++ b/public/assets/baru/css/style.css
@@ -79,7 +79,7 @@ button {
 /* line 40, ../../Arafath/CL/December/234. Finance/HTML/scss/theme-default.scss */
 h1, h2, h3, h4, h5 {
   font-family: "Roboto", sans-serif;
-  color: #001D38;
+  color: rgb(255, 255, 255);
 }
 
 /* line 44, ../../Arafath/CL/December/234. Finance/HTML/scss/theme-default.scss */
